// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Bricks.Table.Th checkGrammar 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkGrammar 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkGrammar 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkGrammar 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkHighlight 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkHighlight 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkHighlight 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkHighlight 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkSpaces 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkSpaces 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkSpaces 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th checkSpaces 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th className 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text my-classname"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colSpan 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  colSpan="3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colSpan 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  colSpan={3}
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colSpan 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  colSpan={3}
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colSpan 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  colSpan="3"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 1`] = `
<th
  className="color-schema-default uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 2`] = `
<th
  className="color-schema-red uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 3`] = `
<th
  className="color-schema-red uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 4`] = `
<th
  className="color-schema-red-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 5`] = `
<th
  className="color-schema-red-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 6`] = `
<th
  className="color-schema-green uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 7`] = `
<th
  className="color-schema-green uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 8`] = `
<th
  className="color-schema-green-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 9`] = `
<th
  className="color-schema-green-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 10`] = `
<th
  className="color-schema-yellow uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 11`] = `
<th
  className="color-schema-yellow uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 12`] = `
<th
  className="color-schema-yellow-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 13`] = `
<th
  className="color-schema-yellow-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 14`] = `
<th
  className="color-schema-purple uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 15`] = `
<th
  className="color-schema-purple uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 16`] = `
<th
  className="color-schema-purple-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 17`] = `
<th
  className="color-schema-purple-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 18`] = `
<th
  className="color-schema-brown uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 19`] = `
<th
  className="color-schema-brown uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 20`] = `
<th
  className="color-schema-brown-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 21`] = `
<th
  className="color-schema-brown-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 22`] = `
<th
  className="color-schema-orange uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 23`] = `
<th
  className="color-schema-orange uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 24`] = `
<th
  className="color-schema-orange-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 25`] = `
<th
  className="color-schema-orange-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 26`] = `
<th
  className="color-schema-cyan uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 27`] = `
<th
  className="color-schema-cyan uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 28`] = `
<th
  className="color-schema-cyan-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 29`] = `
<th
  className="color-schema-cyan-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 30`] = `
<th
  className="color-schema-grey uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 31`] = `
<th
  className="color-schema-grey uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 32`] = `
<th
  className="color-schema-grey-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 33`] = `
<th
  className="color-schema-grey-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 34`] = `
<th
  className="color-schema-pink uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 35`] = `
<th
  className="color-schema-pink uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 36`] = `
<th
  className="color-schema-pink-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 37`] = `
<th
  className="color-schema-pink-rich uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th colorSchema 38`] = `
<th
  className="color-schema-pink uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th content 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</th>
`;

exports[`UU5.Bricks.Table.Th content 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</th>
`;

exports[`UU5.Bricks.Table.Th content 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  <UU5.Common.TextCorrectorContextConsumer
    key="0"
    text="This is Content from ContentMixin"
  />
</th>
`;

exports[`UU5.Bricks.Table.Th content 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
>
  12345
</th>
`;

exports[`UU5.Bricks.Table.Th controlled 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th controlled 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th controlled 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th controlled 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th default props 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th disabled 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</th>
`;

exports[`UU5.Bricks.Table.Th disabled 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th disabled 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th disabled 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <span
    className="uu5-common-disabled-cover"
    key="disabledCover"
  />
</th>
`;

exports[`UU5.Bricks.Table.Th docKit examples UU5.Bricks.Table.Th should render without crash 1`] = `
<div
  className="uu5-bricks-table"
  id="uuID2"
  style={Object {}}
  title={null}
>
  <Header
    className={null}
    colorSchema={null}
    content="Table"
    controlled={true}
    disabled={false}
    dynamic={false}
    hidden={false}
    id="uuID2-header"
    ignoreInnerHTML={false}
    key="uuID2-header"
    level={null}
    mainAttrs={null}
    name={null}
    nestingLevel={null}
    noIndex={false}
    pureRender={false}
    ref_={null}
    selected={false}
    style={null}
    tooltip={null}
    underline={false}
  />
  <table
    className="uu5-bricks-table-table"
  >
    <table-thead
      allowTags={Array []}
      className={null}
      colorSchema="danger"
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuIDA"
      ignoreInnerHTML={false}
      key="uuIDA"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuIDB"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-th
          className={null}
          colSpan="3"
          colorSchema={null}
          content="Name"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuIDA1"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={3}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={3}
          colorSchema={null}
          content="Rank"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuIDA2"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan="3"
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-th
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Promotion prospects"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuIDA3"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-thead>
    <table-tbody
      allowTags={Array []}
      className={null}
      colorSchema={null}
      content={null}
      controlled={true}
      disabled={false}
      dynamic={false}
      hidden={false}
      id="uuIDA4"
      ignoreInnerHTML={false}
      key="uuIDA4"
      mainAttrs={null}
      name={null}
      nestingLevel={null}
      noIndex={false}
      pureRender={false}
      ref_={null}
      selected={false}
      style={null}
      tooltip={null}
    >
      <table-tr
        allowTags={Array []}
        className={null}
        colorSchema={null}
        content={null}
        controlled={true}
        disabled={false}
        dynamic={false}
        hidden={false}
        id="uuIDA5"
        ignoreInnerHTML={false}
        mainAttrs={null}
        name={null}
        nestingLevel={null}
        noIndex={false}
        pureRender={false}
        ref_={null}
        selected={false}
        style={null}
        tooltip={null}
      >
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="Rimmer"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuIDA6"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="2nd class technician"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuIDA7"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
        <table-td
          className={null}
          colSpan={null}
          colorSchema={null}
          content="comical"
          controlled={true}
          disabled={false}
          dynamic={false}
          hidden={false}
          id="uuIDA8"
          ignoreInnerHTML={false}
          mainAttrs={null}
          name={null}
          nestingLevel={null}
          noIndex={false}
          pureRender={false}
          ref_={null}
          rowSpan={null}
          selected={false}
          style={null}
          tooltip={null}
        />
      </table-tr>
    </table-tbody>
  </table>
</div>
`;

exports[`UU5.Bricks.Table.Th dynamic 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th dynamic 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th dynamic 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th dynamic 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th hidden 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-hidden"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th id 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="myId"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th ignoreHTML 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th ignoreHTML 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th ignoreHTML 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th ignoreHTML 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th mainAttrs 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th name 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 5`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 6`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 7`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 8`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 9`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 10`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 11`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 12`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 13`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 14`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 15`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 16`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 17`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 18`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 19`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th nestingLevel 20`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th noIndex 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th noIndex 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th noIndex 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th noIndex 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-noindex"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th pureRender 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th pureRender 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th pureRender 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th pureRender 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th rowSpan 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  rowSpan={3}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th rowSpan 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  rowSpan="3"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th rowSpan 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  rowSpan="3"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th rowSpan 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  rowSpan={3}
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th selected 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th selected 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th selected 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th selected 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text uu5-common-selected"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th style 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th style 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th style 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th style 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th textCorrector 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th textCorrector 2`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th textCorrector 3`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th textCorrector 4`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title={null}
/>
`;

exports[`UU5.Bricks.Table.Th tooltip 1`] = `
<th
  className="uu5-bricks-table-th uu5-common-text"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
/>
`;
